Add testimonial images.

--- a/index.html
+++ b/index.html
@@ -418,14 +418,19 @@
               <div class="team-content">
                 <i><img src="assets/images/testimonial-icon.png" alt="" /></i>
                 <p>
-                  "The counselling sessions were incredibly beneficial, offering
+                  "The therapy sessions were incredibly beneficial, offering
                   valuable guidance and support. The therapist's attentiveness
                   and insights helped me gain new perspectives and insights into
-                  myself. I highly recommend this professional counselling service
+                  myself. I highly recommend this professional therapy service
                   for anyone seeking positive change."
                 </p>
                 <div class="user-image">
-                  <img src="http://placehold.it/60x60" alt="" />
+                  <img
+                    src="assets/images/avatar1.jpg"
+                    width="60"
+                    height="60"
+                    alt=""
+                  />
                 </div>
                 <div class="team-info">
                   <h3 class="user-name">Catherine Soft</h3>
@@ -450,7 +455,12 @@
                   journey."
                 </p>
                 <div class="user-image">
-                  <img src="http://placehold.it/60x60" alt="" />
+                  <img
+                    src="assets/images/avatar2.jpg"
+                    width="60"
+                    height="60"
+                    alt=""
+                  />
                 </div>
                 <div class="team-info">
                   <h3 class="user-name">Kelvin Wood</h3>
@@ -474,7 +484,12 @@
                   service for life-changing guidance and unwavering support."
                 </p>
                 <div class="user-image">
-                  <img src="http://placehold.it/60x60" alt="" />
+                  <img
+                    src="assets/images/avatar3.jpg"
+                    width="60"
+                    height="60"
+                    alt=""
+                  />
                 </div>
                 <div class="team-info">
                   <h3 class="user-name">David Martin</h3>
@@ -484,10 +499,6 @@
             </div>
           </div>
           <!-- ***** Testimonials Item End ***** -->
-        </div>
-      </div>
-    </section>
-    <!-- ***** Testimonials End ***** -->
 
     <!-- ***** Pricing Plans Start ***** -->
     <section class="section colored" id="pricing-plans">
