Fixed images avatar

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                   for anyone seeking positive change."
                 </p>
                 <div class="user-image">
-                  <img src="http://placehold.it/60x60" alt="" />
+                  <img src="./assets/images/avatar2.jpeg" width="60" height="60" alt="avatar2" />
                 </div>
                 <div class="team-info">
                   <h3 class="user-name">Catherine Soft</h3>
@@ -450,7 +450,7 @@
                   journey."
                 </p>
                 <div class="user-image">
-                  <img src="http://placehold.it/60x60" alt="" />
+                  <img src="./assets/images/avatar3.jpeg" width="60" height="60" alt="avatar3" />
                 </div>
                 <div class="team-info">
                   <h3 class="user-name">Kelvin Wood</h3>
@@ -474,7 +474,7 @@
                   service for life-changing guidance and unwavering support."
                 </p>
                 <div class="user-image">
-                  <img src="http://placehold.it/60x60" alt="" />
+                  <img src="./assets/images/avatar1.jpeg" width="60" height="60" alt="avatar1" />
                 </div>
                 <div class="team-info">
                   <h3 class="user-name">David Martin</h3>
@@ -553,14 +553,14 @@
               <div class="pricing-body">
                 <div class="price-wrapper">
                   <span class="currency">$</span>
-                  <span class="price">21.50</span>
+                  <span class="price">42.50</span>
                   <span class="period">monthly</span>
                 </div>
                 <ul class="list">
-                  <li class="active">60 minutes trial session</li>
+                  <li class="active">1 montly sessions</li>
                   <li class="active">Live chat</li>
                   <li class="active">Limited Training platform</li>
-                  <li class="active">60-minute support</li>
+                  <li class="active">Limited support</li>
                   <li>Unlimited Emails</li>
                   <li>24/7 Security</li>
                 </ul>
@@ -584,14 +584,14 @@
               <div class="pricing-body">
                 <div class="price-wrapper">
                   <span class="currency">$</span>
-                  <span class="price">42.00</span>
+                  <span class="price">100.00</span>
                   <span class="period">monthly</span>
                 </div>
                 <ul class="list">
-                  <li class="active">Unlimited Bookings</li>
+                  <li class="active">2 montly sessions</li>
                   <li class="active">Live chat</li>
-                  <li class="active">Limited Training platform</li>
-                  <li class="active">120-minute support</li>
+                  <li class="active">Unlimited Training platform</li>
+                  <li class="active">Unlimited support</li>
                   <li class="active">Unlimited Emails</li>
                   <li class="active">24/7 Security</li>
                 </ul>
