Edit onboarding text.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
 
     <title>Mentally</title>
 
-
     <!-- Additional CSS Files -->
     <link
       rel="stylesheet"
@@ -163,12 +162,12 @@
                   </div>
                   <h5 class="features-title">Modern Approach</h5>
                   <p>
-                    Our counselling center offers a collaborative and personalized
-                    approach. By building strong therapeutic relationships, we
-                    understand your unique experiences and goals. Using
-                    evidence-based techniques, we address issues like anxiety,
-                    depression, stress management, self-esteem, and
-                    relationships.
+                    Our counselling center offers a collaborative and
+                    personalized approach. By building strong therapeutic
+                    relationships, we understand your unique experiences and
+                    goals. Using evidence-based techniques, we address issues
+                    like anxiety, depression, stress management, self-esteem,
+                    and relationships.
                   </p>
                 </div>
               </div>
@@ -254,8 +253,8 @@
                 challenging. Whether you're dealing with academic pressure,
                 career choices, relationship struggles, or mental health
                 concerns, we're here to provide the support you need. Our
-                treatment services are specifically tailored to address the unique
-                needs and experiences of young adults like you.
+                treatment services are specifically tailored to address the
+                unique needs and experiences of young adults like you.
               </p>
             </div>
           </div>
@@ -312,10 +311,11 @@
               <div class="info">
                 <h1>Onboarding Process</h1>
                 <p>
-                  Through personalized consultations and evidence-based counselling
-                  sessions, our streamlined process establishes a supportive
-                  environment that empowers you to effectively work towards and
-                  achieve your goals in a collaborative and impactful manner.
+                  Through personalized consultations and evidence-based
+                  counselling sessions, our streamlined process establishes a
+                  supportive environment that empowers you to effectively work
+                  towards and achieve your goals in a collaborative and
+                  impactful manner.
                 </p>
               </div>
             </div>
@@ -383,7 +383,7 @@
         </div>
         <div class="text-center mt-5">
           <a href="./onboarding" class="main-button-slider"
-            >Let´s get started!</a
+            >Let's get started!</a
           >
         </div>
       </div>
@@ -421,11 +421,16 @@
                   "The counselling sessions were incredibly beneficial, offering
                   valuable guidance and support. The therapist's attentiveness
                   and insights helped me gain new perspectives and insights into
-                  myself. I highly recommend this professional counselling service
-                  for anyone seeking positive change."
+                  myself. I highly recommend this professional counselling
+                  service for anyone seeking positive change."
                 </p>
                 <div class="user-image">
-                  <img src="./assets/images/avatar2.jpeg" width="60" height="60" alt="avatar2" />
+                  <img
+                    src="./assets/images/avatar2.jpeg"
+                    width="60"
+                    height="60"
+                    alt="avatar2"
+                  />
                 </div>
                 <div class="team-info">
                   <h3 class="user-name">Catherine Soft</h3>
@@ -450,7 +455,12 @@
                   journey."
                 </p>
                 <div class="user-image">
-                  <img src="./assets/images/avatar3.jpeg" width="60" height="60" alt="avatar3" />
+                  <img
+                    src="./assets/images/avatar3.jpeg"
+                    width="60"
+                    height="60"
+                    alt="avatar3"
+                  />
                 </div>
                 <div class="team-info">
                   <h3 class="user-name">Kelvin Wood</h3>
@@ -474,7 +484,12 @@
                   service for life-changing guidance and unwavering support."
                 </p>
                 <div class="user-image">
-                  <img src="./assets/images/avatar1.jpeg" width="60" height="60" alt="avatar1" />
+                  <img
+                    src="./assets/images/avatar1.jpeg"
+                    width="60"
+                    height="60"
+                    alt="avatar1"
+                  />
                 </div>
                 <div class="team-info">
                   <h3 class="user-name">David Martin</h3>
@@ -502,7 +517,10 @@
           <div class="offset-lg-3 col-lg-6">
             <div class="center-text">
               <p>
-                Explore our affordable pricing options for therapy training. Choose from flexible membership plans that fit your budget. Start your transformative journey at a cost that works for you. Invest in yourself and unlock your potential today.
+                Explore our affordable pricing options for therapy training.
+                Choose from flexible membership plans that fit your budget.
+                Start your transformative journey at a cost that works for you.
+                Invest in yourself and unlock your potential today.
               </p>
             </div>
           </div>
@@ -655,7 +673,12 @@
           <div class="offset-lg-3 col-lg-6">
             <div class="center-text">
               <p>
-                Welcome to our treatment training platform, where you can embark on a transformative journey of self-discovery, personal growth, and emotional well-being. Our platform is designed to provide you with the necessary tools, resources, and support to navigate your unique challenges and empower you to lead a fulfilling life.
+                Welcome to our treatment training platform, where you can embark
+                on a transformative journey of self-discovery, personal growth,
+                and emotional well-being. Our platform is designed to provide
+                you with the necessary tools, resources, and support to navigate
+                your unique challenges and empower you to lead a fulfilling
+                life.
               </p>
             </div>
           </div>
@@ -673,7 +696,11 @@
                   <a href="#">Building Inner Strength for Life's Challenges</a>
                 </h3>
                 <div class="text">
-                  Develop emotional resilience and inner strength to navigate life's challenges. Learn stress management, emotional regulation, and positive mindset techniques in interactive sessions guided by experienced therapists. Enhance your ability to bounce back and thrive.
+                  Develop emotional resilience and inner strength to navigate
+                  life's challenges. Learn stress management, emotional
+                  regulation, and positive mindset techniques in interactive
+                  sessions guided by experienced therapists. Enhance your
+                  ability to bounce back and thrive.
                 </div>
                 <a href="#" class="main-button">Read More</a>
               </div>
@@ -689,7 +716,11 @@
                   <a href="#">Enhance Relationships and Connection</a>
                 </h3>
                 <div class="text">
-                  Learn effective communication skills for deeper connections and conflict resolution. Develop active listening, assertiveness, and problem-solving techniques through role-plays and guided discussions. Transform your relationships with valuable insights from skilled therapists..
+                  Learn effective communication skills for deeper connections
+                  and conflict resolution. Develop active listening,
+                  assertiveness, and problem-solving techniques through
+                  role-plays and guided discussions. Transform your
+                  relationships with valuable insights from skilled therapists..
                 </div>
                 <a href="#" class="main-button">Read More</a>
               </div>
@@ -705,7 +736,11 @@
                   <a href="#">Cultivate Present-Moment Awareness</a>
                 </h3>
                 <div class="text">
-                  Discover mindfulness to reduce stress and improve focus. Practice mindfulness techniques like meditation and breathing exercises to develop calmness and clarity. Integrate mindfulness into daily life for stress management and emotional balance.
+                  Discover mindfulness to reduce stress and improve focus.
+                  Practice mindfulness techniques like meditation and breathing
+                  exercises to develop calmness and clarity. Integrate
+                  mindfulness into daily life for stress management and
+                  emotional balance.
                 </div>
                 <a href="#" class="main-button">Read More</a>
               </div>
@@ -845,9 +880,7 @@
         </div>
         <div class="row">
           <div class="col-lg-12">
-            <p class="copyright">
-              Copyright CodeRadar Team
-            </p>
+            <p class="copyright">Copyright CodeRadar Team</p>
           </div>
         </div>
       </div>
