Add readme & modal

--- a/index.html
+++ b/index.html
@@ -69,6 +69,51 @@
   </head>
 
   <body>
+    <div class="modal">
+      <div class="modal-content">
+        <b
+          >Mentally resources
+          <br />
+          <br />
+          <a
+            href="/assets/documents/mentally-presentation.pdf"
+            target="_blank"
+            rel="noreferrer noopener nofollow"
+            >The presentation</a
+          >
+          <br />
+          <a
+            href="https://github.com/MrDanielHarka?tab=repositories&q=mentally"
+            target="_blank"
+            >The code</a
+          >
+          <br />
+          <a
+            href="/assets/documents/mentally-pitch.pdf"
+            target="_blank"
+            rel="noreferrer noopener nofollow"
+            >The pitch</a
+          >
+          <br />
+          <a
+            href="/assets/documents/mentally-research.pdf"
+            target="_blank"
+            rel="noreferrer noopener nofollow"
+            >The research</a
+          >
+          <br />
+          <a
+            href="https://drive.google.com/drive/folders/1TAzblUMlIqaQDwCqOVM2uTUww2hwMQ2b?usp=sharing"
+            target="_blank"
+            rel="noreferrer noopener nofollow"
+            >The photos</a
+          >
+          <br />
+          <br />
+          <a href="#" class="main-button-slider button-close">Close</a>
+        </b>
+      </div>
+    </div>
     <!-- ***** Preloader Start ***** -->
     <div id="preloader">
       <div class="jumper">
@@ -86,7 +131,7 @@
           <div class="col-12">
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
-              <a href="#" class="logo">
+              <a href="/" class="logo">
                 <img
                   src="assets/images/mentally-logo.png"
                   width="50"
@@ -100,7 +145,7 @@
               <ul class="nav">
                 <li><a href="#welcome" class="active">Home</a></li>
                 <li><a href="#features">About</a></li>
-                <li><a href="#work-process">Onboarding Process</a></li>
+                <li><a href="#work-process">Onboarding</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#pricing-plans">Pricing Tables</a></li>
                 <li><a href="#blog">Training Platform</a></li>
@@ -885,6 +930,9 @@
         </div>
       </div>
     </footer>
+
+    <!-- Modal -->
+    <script src="assets/js/modal.js"></script>
 
     <!-- jQuery -->
     <script src="assets/js/jquery-2.1.0.min.js"></script>
