--- a/onboarding.html
+++ b/onboarding.html
@@ -53,7 +53,6 @@
     />
     <link href="./assets/css/custom.css" rel="stylesheet" />
     <title>Mentally</title>
-    
 
     <!-- Additional CSS Files -->
     <link
@@ -86,7 +85,7 @@
           <div class="col-12">
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
-              <a href="#" class="logo">
+              <a href="/" class="logo">
                 <img
                   src="assets/images/mentally-logo.png"
                   width="50"
@@ -99,7 +98,7 @@
               <ul class="nav">
                 <li><a href="/#welcome" class="active">Home</a></li>
                 <li><a href="/#features">About</a></li>
-                <li><a href="/#work-process">Onboarding Process</a></li>
+                <li><a href="/#work-process">Onboarding</a></li>
                 <li><a href="/#testimonials">Testimonials</a></li>
                 <li><a href="/#pricing-plans">Pricing Tables</a></li>
                 <li><a href="/#blog">Training platform</a></li>
@@ -128,25 +127,13 @@
           <div class="col-lg-6 offset-lg-3">
             <div>
               <div class="form-group">
-                <label for="name">Full Name</label>
-                <input
-                  type="text"
-                  id="name"
-                  name="name"
-                  class="form-control"
-                  required
-                />
+                <label>Full Name</label>
+                <input type="text" id="name" class="form-control" required />
               </div>
 
               <div class="form-group">
                 <label for="email">Email Address</label>
-                <input
-                  type="email"
-                  id="email"
-                  name="email"
-                  class="form-control"
-                  required
-                />
+                <input type="email" id="email" class="form-control" required />
               </div>
 
               <div class="form-group">
@@ -154,7 +141,6 @@
                 <input
                   type="password"
                   id="password"
-                  name="password"
                   class="form-control"
                   required
                 />
@@ -165,7 +151,6 @@
                 <input
                   type="password"
                   id="confirm-password"
-                  name="confirm-password"
                   class="form-control"
                   required
                 />
@@ -184,14 +169,14 @@
 
       <div class="form-group">
         <div class="onboarding-question onboarding-question-1 hidden">
-          <label for="cars"
+          <label
             >How would you describe your current mental state and emotional
             well-being?</label
           >
 
           <br />
 
-          <select name="cars" id="cars" class="form-control">
+          <select class="form-control">
             <br />
             <option value="volvo">Excellent</option>
             <option value="saab">Good</option>
@@ -211,14 +196,14 @@
       </div>
       <div class="form-group">
         <div class="onboarding-question onboarding-question-2 hidden">
-          <label for="cars"
+          <label
             >Have you ever received any form of psychological or counseling
             services in the past?</label
           >
 
           <br />
 
-          <select name="cars" id="cars" class="form-control">
+          <select class="form-control">
             <br />
             <option value="volvo">Yes, briefly</option>
             <option value="saab">Yes, for an extended period</option>
@@ -237,14 +222,14 @@
       </div>
       <div class="form-group">
         <div class="onboarding-question onboarding-question-3 hidden">
-          <label for="cars"
+          <label
             >Are you currently taking any medications or receiving treatment for
             a mental health condition?</label
           >
 
           <br />
 
-          <select name="cars" id="cars" class="form-control">
+          <select class="form-control">
             <br />
             <option value="volvo">Yes, medication</option>
             <option value="saab">Yes, therapy/counseling</option>
@@ -264,14 +249,14 @@
       </div>
       <div class="form-group">
         <div class="onboarding-question onboarding-question-4 hidden">
-          <label for="cars"
+          <label
             >Do you have any specific goals or expectations for this onboarding
             process? What would you like to achieve through our services?</label
           >
 
           <br />
 
-          <select name="cars" id="cars" class="form-control">
+          <select class="form-control">
             <br />
             <option value="volvo">Managing stress and anxiety</option>
             <option value="saab">Improving relationships</option>
@@ -293,14 +278,14 @@
 
       <div class="form-group">
         <div class="onboarding-question onboarding-question-5 hidden">
-          <label for="cars"
+          <label
             >Are there any particular challenges or issues you would like to
             address during your sessions with our psychologists?</label
           >
 
           <br />
 
-          <select name="cars" id="cars" class="form-control">
+          <select class="form-control">
             <br />
             <option value="volvo">Depression</option>
             <option value="saab">Anxiety disorders</option>
@@ -323,14 +308,14 @@
 
       <div class="form-group">
         <div class="onboarding-question onboarding-question-6 hidden">
-          <label for="cars"
+          <label
             >Have you experienced any major life events or significant changes
             recently that may have impacted your mental health?</label
           >
 
           <br />
 
-          <select name="cars" id="cars" class="form-control">
+          <select class="form-control">
             <br />
             <option value="volvo">Yes</option>
             <option value="saab">No</option>
@@ -348,14 +333,14 @@
       </div>
       <div class="form-group">
         <div class="onboarding-question onboarding-question-7 hidden">
-          <label for="cars"
+          <label
             >Do you have any preferences regarding the gender or background of
             the psychologist you will be working with?</label
           >
 
           <br />
 
-          <select name="cars" id="cars" class="form-control">
+          <select class="form-control">
             <br />
             <option value="volvo">Male</option>
             <option value="saab">Female</option>
@@ -374,14 +359,14 @@
       </div>
       <div class="form-group">
         <div class="onboarding-question onboarding-question-8 hidden">
-          <label for="cars"
+          <label
             >How did you hear about our psychology services and what made you
             decide to seek assistance at this time?</label
           >
 
           <br />
 
-          <select name="cars" id="cars" class="form-control">
+          <select class="form-control">
             <br />
             <option value="volvo">Online search</option>
             <option value="saab">
@@ -404,14 +389,14 @@
       </div>
       <div class="form-group">
         <div class="onboarding-question onboarding-question-9 hidden">
-          <label for="cars"
+          <label
             >Is there any additional information or specific concerns you would
             like to share with us before starting the onboarding process?</label
           >
 
           <br />
 
-          <select name="cars" id="cars" class="form-control">
+          <select class="form-control">
             <br />
             <option value="volvo">Yes</option>
             <option value="volvo">No</option>
@@ -419,7 +404,6 @@
               class="form-control"
               id="message-9"
               placeholder="No, I would like also the teraphist know..."
-              name="message"
               rows="4"
               cols="40"
             ></textarea>
@@ -438,7 +422,7 @@
 
       <div class="form-group">
         <div class="onboarding-question onboarding-question-10 hidden">
-          <label for="cars"
+          <label
             >Are you comfortable with sharing personal and sensitive information
             related to your mental health during the onboarding and counseling
             sessions?</label
@@ -446,7 +430,7 @@
 
           <br />
 
-          <select name="cars" id="cars" class="form-control">
+          <select class="form-control">
             <br />
             <option value="volvo">Yes</option>
             <option value="saab">No</option>
@@ -454,7 +438,6 @@
               class="form-control"
               id="message-10"
               placeholder="No, beacuse..."
-              name="message"
               rows="4"
               cols="40"
             ></textarea>
@@ -510,9 +493,7 @@
         </div>
         <div class="row">
           <div class="col-lg-12">
-            <p class="copyright">
-              Copyright CodeRadar Team
-            </p>
+            <p class="copyright">Copyright CodeRadar Team</p>
           </div>
         </div>
       </div>
